# DPG

./: .gitignore  CMakeLists.txt
Meshes/: quadmesh.geo
input/: cooks-membrane.geo  cooks-membrane.json  cooks-membrane.msh  quadmesh.msh  verifyDPG NoBC.json  verifyDPG.json
src/: CMakeLists.txt  ProblemData.cpp  ProblemData.h  TPZElasticityDPG.cpp  TPZElasticityDPG.h  TPZElasticityPG2D.cpp  TPZElasticityPG2D.h  TPZElasticityTH.cpp  TPZElasticityTH.h  TPZElementMatrixPG.cpp  TPZElementMatrixPG.h  TPZElementMatrixPGT.h  TPZMultiphysicsCompElPG.cpp  TPZMultiphysicsCompElPG.h  TPZProblemDataDPG.cpp  TPZProblemDataDPG.h
targets/: CMakeLists.txt  DPG-main.cpp  cooks-membrane-H1.cpp
